[package]
name = "VM-proxy"
version = "0.1.0"
edition = "2024"
authors = ["Valentín Bolfík"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.97"
config = { version = "0.15.11", features = ["toml"] }
tokio = { version =  "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.28"
tracing-subscriber = "0.3.19"
once_cell = "1.21.3"
rusqlite = { version = "0.34.0", features = ["bundled", "blob"] }
